fix(client/src/components/ui/input): bug with naming of classes and a covering of all input

--- a/client/src/components/ui/Input/Input.module.scss
+++ b/client/src/components/ui/Input/Input.module.scss
@@ -4,7 +4,7 @@
   }
 
   &_container {
-    background-color: var(--color-input-background);
+    background: var(--color-input-background);
     padding: 17px 20px;
     border-radius: var(--border-radius-input);
     transition: box-shadow .2s ease-in;
@@ -22,6 +22,7 @@
   }
 
   &_input {
+    width: 100%;
     transition: transform .2s ease-in;
 
     input {
@@ -36,17 +37,17 @@
   }
 
   &_root:hover, &_focused {
-    .Searcher_container {
+    .UiInput_container {
       box-shadow: 0 0 5px var(--color-input-shadow);
     }
 
-    .Searcher_icon {
+    .UiInput_icon {
       opacity: 0;
       margin-right: 0;
       transform: translateX(-16px);
     }
 
-    .Searcher_input {
+    .UiInput_input {
       transform: translateX(-16px);
     }
   }
